Added a game select menu (again, ported from Beat Feet)

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -2,3 +2,9 @@ app.name=Super Mega Retro Wars
 
 main-menu.btn.play=Play
 main-menu.btn.quit=Quit
+
+btn.back=Back
+
+game-select.title=Choose a game
+
+game.asteroids.name=Asteroids
