Show teasers to unimplemented games in the game select menu.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -8,3 +8,9 @@ btn.back=Back
 game-select.title=Choose a game
 
 game.asteroids.name=Asteroids
+
+game.missile-command.name=Missile Command
+
+unimplemented-game.title=Coming soon!
+unimplemented-game.description=Not yet...
+unimplemented-game.coming-soon=Coming soon!
