More informative messages for unimplemented games. Show thruster for asteroids.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -8,9 +8,11 @@ btn.back=Back
 game-select.title=Choose a game
 
 game.asteroids.name=Asteroids
-
 game.missile-command.name=Missile Command
+game.space-invaders.name=Space Invaders
+game.snake.name=Snake
 
 unimplemented-game.title=Coming soon!
-unimplemented-game.description=Not yet...
+unimplemented-game.description=Oops! This game has not yet been made.\nThink we should work on this next?\nVote for it on GitHub.\nWhen we get time to add another game, the one with the most thumbs up will come next.
 unimplemented-game.coming-soon=Coming soon!
+unimplemented-game.vote=Vote
