End of game screen. Show all players scores in realtime.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -19,3 +19,7 @@ unimplemented-game.coming-soon=Coming soon!
 unimplemented-game.vote=Vote
 
 multiplayer-lobby.title=Multiplayer
+
+end-multiplayer.title=Game Over
+end-multiplayer.waiting-for-others=Waiting for others...
+end-multiplayer.still-playing=Still playing
