Server falling over causes clients to show a network outage screen.
This will suck if you were close to winning, but it is hard to do anything else
sensible in this case. Perhaps in the future we can try to reconnect, etc but for now just bail.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -1,10 +1,11 @@
-app.name=Super Mega Retro Wars
+app.name=Super Retro Mega Wars
 
 main-menu.btn.play-single-player=Solo
 main-menu.btn.play-multiplayer=Multiplayer
 main-menu.btn.quit=Quit
 
 btn.back=Back
+btn.main-menu=Main Menu
 
 game-select.title=Choose a game
 
@@ -23,3 +24,7 @@ multiplayer-lobby.title=Multiplayer
 end-multiplayer.title=Game Over
 end-multiplayer.waiting-for-others=Waiting for others...
 end-multiplayer.still-playing=Still playing
+
+network-error.title=Network Error
+network-error.disconnected.server-stopped=The server was stopped,\nplay cannot resume.
+network-error.disconnected.unexpected=You were disconnected from\nthe game unexpectedly.
