Tweaks to game select screen (icon improvements). Better description of game voting.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -12,10 +12,12 @@ game-select.title=Choose a game
 game.asteroids.name=Asteroids
 game.missile-command.name=Missile Command
 game.space-invaders.name=Space Invaders
+game.tetris.name=Tetris
 game.snake.name=Snake
 
 unimplemented-game.title=Coming soon!
-unimplemented-game.description=Oops! This game has not yet been made.\nThink we should work on this next?\nVote for it on GitHub.\nWhen we get time to add another game, the one with the most thumbs up will come next.
+unimplemented-game.description=Oops! This game has not yet been made.\nThink we should work on this next?\nVote for it on GitHub.
+unimplemented-game.next-game-dev=When we get time to add another game,\nthose with many thumbs up will most likely come next.
 unimplemented-game.coming-soon=Coming soon!
 unimplemented-game.vote=Vote
 
