Option to disable gratuitous visual effects.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -2,10 +2,14 @@ app.name=Super Retro Mega Wars
 
 main-menu.btn.play-single-player=Solo
 main-menu.btn.play-multiplayer=Multiplayer
+main-menu.btn.options=Options
 main-menu.btn.quit=Quit
 
 btn.back=Back
 btn.main-menu=Main Menu
+
+options.title=Options
+options.visual-effects=Gratuitous visual effects
 
 game-select.title=Choose a game
 
