Lessen the eye-strain induced by visual effects.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -9,7 +9,7 @@ btn.back=Back
 btn.main-menu=Main Menu
 
 options.title=Options
-options.visual-effects=Gratuitous visual effects
+options.visual-effects=Gratuitous eye straining retro effects
 
 game-select.title=Choose a game
 
