Show immediate feedback about network events to the user as a rolling log in the screen corner.
Messages include:
 - incoming attack
 - you are attacking others
 - you are now in position x of y
 - player has died (but doesn't specify which - that will be handled by crossing out their avatar)

Messages start large, then go small after a few seconds, then fade away after even longer.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -28,3 +28,8 @@ end-multiplayer.still-playing=Still playing
 network-error.title=Network Error
 network-error.disconnected.server-stopped=The server was stopped,\nplay cannot resume.
 network-error.disconnected.unexpected=You were disconnected from\nthe game unexpectedly.
+
+game-message.attacking-other-players=Attacking other players!
+game-message.incoming-attack=Incoming attack!
+game-message.player-died=Player has died
+game-message.position-changed=You are now in position {0} of {1}!
