Gracefully let players join midway through the game.
These players will be able to observe the scores of other players
but others will not see these players until returning to the lobby.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -21,7 +21,9 @@ unimplemented-game.vote=Vote
 
 multiplayer-lobby.title=Multiplayer
 
-end-multiplayer.title=Game Over
+end-multiplayer.game-over=Game Over
+end-multiplayer.in-progress.title=Game In Progress...
+end-multiplayer.in-progress.description=You will join the next game...
 end-multiplayer.waiting-for-others=Waiting for others...
 end-multiplayer.still-playing=Still playing
 
