Wrap text for 'coming soon' games.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -16,7 +16,7 @@ game-select.title=Choose a game
 unimplemented-game.title=More Games Coming Soon!
 unimplemented-game.description=Know of a good game to work on next?\nVote for it on GitHub.
 unimplemented-game.next-game-dev=When we get time to add another game,\nthose with many thumbs up will most likely come next.
-unimplemented-game.coming-soon=More coming soon!
+unimplemented-game.coming-soon=More\ncoming soon!
 unimplemented-game.vote=Vote
 
 multiplayer-lobby.title=Multiplayer
