Show better messages to last player standing. Better menu navigation after network errors.
When you are the last player standing:
* Don't show "Attacking other players" (they are all dead).
* Show a persistent message saying you are the last one remaining,
  and update how many points are required each time.

Navigate back to the server you last connected to for certain
network errors.

Allow desktop versions to force random Player ID's (to allow local development
to play multiplayer without both trying to connect as the same player).

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -34,4 +34,5 @@ network-error.disconnected.unexpected=You were disconnected from\nthe game unexp
 game-message.attacking-other-players=Attacking other players!
 game-message.incoming-attack=Incoming attack!
 game-message.player-died=Player has died
+game-message.last-player-standing=Last survivor: {0} to win!
 game-message.position-changed=You are now in position {0} of {1}!
