Start i18n strings throughout the app.
Still a few to go in the multiplayer/networking area.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -10,8 +10,18 @@ btn.main-menu=Main Menu
 
 options.title=Options
 options.visual-effects=Gratuitous eye straining retro effects
+options.controller-layouts=Controller layouts
+options.multiplayer-avatar=Multiplayer Avatar
+options.avatar.choose=Choose your avatar
+options.avatar.choose-description-empty=You have not currently chosen an avatar.\nChoose from one of these:
+options.avatar.choose-description=To change, choose from one of these
+options.avatar.current=Current avatar
+options.avatar.btn-clear=Clear
+options.avatar.btn-help=Help
+options.avatar.btn-show-more=Show more
 
 game-select.title=Choose a game
+game-select.high-score=High Score
 
 unimplemented-game.title=More Games Coming Soon!
 unimplemented-game.description=Know of a good game to work on next?\nVote for it on GitHub.
@@ -19,7 +29,33 @@ unimplemented-game.next-game-dev=When we get time to add another game,\nthose wi
 unimplemented-game.coming-soon=More\ncoming soon!
 unimplemented-game.vote=Vote
 
+multiplayer.lobby.splash.play-others=Play other retro fans\nover the internet
+multiplayer.lobby.splash.play-friends=Play friends on your WiFi network
+multiplayer.lobby.splash.btn.play-online=Play online
+multiplayer.lobby.splash.btn.start-local-server=Start local server
+multiplayer.lobby.splash.btn.join-local-server=Join local server
+
 multiplayer-lobby.title=Multiplayer
+
+multiplayer.local.starting-server=Starting server
+multiplayer.local.waiting-for-others=Waiting for other players to join
+multiplayer.prompt-to-share=Looking for others to play with? Tired of waiting?\nInvite a friend to download Super Retro Mega Wars.
+multiplayer.btn.share=Share
+multiplayer.local.searching-for-server=Searching for server
+multiplayer.local.could-not-find-server=Could not find server
+multiplayer.local.ensure-same-wifi=Make sure you're both connected to the same WiFi network
+multiplayer.local.could-not-find-server.help-1=Has another player started a server?
+multiplayer.local.could-not-find-server.help-2=Are you on the same WiFi network?
+multiplayer.local.could-not-find-server.help-3=Do you both have the latest version of Super Retro Mega Wars?
+
+multiplayer.connecting-to-server=Connecting to server
+
+multiplayer.ready-to-start.description=Ready to start
+multiplayer.ready-to-start.btn.start-game=Start game
+
+multiplayer.looking-for-public-servers=Looking for public servers...
+
+multiplayer.avatar.you=You
 
 end-multiplayer.game-over=Game Over
 end-multiplayer.in-progress.title=Game In Progress...
@@ -36,3 +72,19 @@ game-message.incoming-attack=Incoming attack!
 game-message.player-died=Player has died
 game-message.last-player-standing=Last survivor: {0} to win!
 game-message.position-changed=You are now in position {0} of {1}!
+
+game.asteroids.intro-message.positive=Destroy the asteroids
+game.asteroids.intro-message.negative=Protect your ship
+game.missile-command.intro-message.positive=Protect the cities
+game.missile-command.intro-message.negative=Conserve your missiles
+game.snake.intro-message.positive=Eat the fruit
+game.snake.intro-message.negative=Avoid your tail
+game.tempest.intro-message.positive=Shoot the enemies
+game.tempest.intro-message.negative=Don't let them touch you
+game.tetris.intro-message.positive=Fill complete rows
+game.tetris.intro-message.negative=Stay below the top
+game.space-invaders.intro-message.positive=Shoot the aliens
+game.space-invaders.intro-message.negative=Dodge their shots
+
+game.misc.game-over=Game Over
+game.misc.insert-coins=Insert coin\nto continue
