Extract more strings for i18n.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -53,7 +53,30 @@ multiplayer.connecting-to-server=Connecting to server
 multiplayer.ready-to-start.description=Ready to start
 multiplayer.ready-to-start.btn.start-game=Start game
 
-multiplayer.looking-for-public-servers=Looking for public servers...
+multiplayer.server-list.looking-for-public-servers=Looking for public servers...
+multiplayer.server-list.checking-servers=Checking servers:
+multiplayer.server-list.run-a-server=Want to help the Super Retro Mega Wars\nproject by running a public server?
+multiplayer.server-list.btn.learn-how-to-help=Learn how
+multiplayer.server-list.no-servers-found=No servers found
+multiplayer.server-list.unsupported=Unsupported.\nPlease upgrade to at least v{0}.
+multiplayer.server-list.btn.join=Join
+multiplayer.server-list.btn.info=Info
+
+multiplayer.final-scores.winner=Winner
+multiplayer.final-scores.others=Other
+multiplayer.final-scores.winner.sole-survivor-1=You win. You are the sole survivor.\nYou have the highest score. Nobody can catch you.
+multiplayer.final-scores.winner.sole-survivor-2=You win. You outlasted your challengers.\nYour score is the best.
+multiplayer.final-scores.winner.sole-survivor-3=You win. Your survival skills are superior.\nTheir scores are inferior.
+multiplayer.final-scores.winner.highest-score-1=You win. You may not have survived as long,\nbut you scored more.
+multiplayer.final-scores.winner.highest-score-2=You win.\nNo need to survive when you score as well as you do.
+multiplayer.final-scores.winner.highest-score-3=You win.\nYou didn't survive, but you won.
+multiplayer.final-scores.winner.loser-1=You lost.\nBetter luck next time.
+multiplayer.final-scores.winner.loser-2=You lost.\nThere is always next time.
+multiplayer.final-scores.winner.loser-3=You lost.\nPractice more, then win next time.
+multiplayer.final-scores.next-game=The next game will begin soon...
+multiplayer.final-scores.points-required-to-win=Needs {0,choice,1#1 more point|1<{0,number,integer} more points} to win!
+multiplayer.final-scores.game-in-progress=Game in progress
+multiplayer.final-scores.you-will-join-next-game="You will join the next game...
 
 multiplayer.avatar.you=You
 
