Extract more strings relating to network error messages.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -76,7 +76,7 @@ multiplayer.final-scores.winner.loser-3=You lost.\nPractice more, then win next 
 multiplayer.final-scores.next-game=The next game will begin soon...
 multiplayer.final-scores.points-required-to-win=Needs {0,choice,1#1 more point|1<{0,number,integer} more points} to win!
 multiplayer.final-scores.game-in-progress=Game in progress
-multiplayer.final-scores.you-will-join-next-game="You will join the next game...
+multiplayer.final-scores.you-will-join-next-game=You will join the next game...
 
 multiplayer.avatar.you=You
 
@@ -87,8 +87,16 @@ end-multiplayer.waiting-for-others=Waiting for others...
 end-multiplayer.still-playing=Still playing
 
 network-error.title=Network Error
+network-error.btn.try-again=Try again
+network-error.btn.rejoin=Rejoin
 network-error.disconnected.server-stopped=The server was stopped,\nplay cannot resume.
 network-error.disconnected.unexpected=You were disconnected from\nthe game unexpectedly.
+network-error.remain-open.title=Game must remain open while connected to the server.\nPlease rejoin to continue playing.
+network-error.server-full.title=Maximum number of players for this server has been reached.\nPlease try again later or join another server.
+network-error.avatar-in-use.title=Someone is already using your avatar... What are the odds?\nPlease either change your avatar, or wait until they leave.
+network-error.avatar-in-use.details=By the way: the odds of this happening randomly are 1 in 18446744073709551614.\nThe most likely scenario is a bug in the server when you last disconnected.
+network-error.server-shutdown.title=The server has been shutdown
+network-error.server-shutdown.details=This may be for scheduled maintenance, or it could have crashed.\nHopefully it will be back up again soon.\n\nPlease join another server to continue playing.
 
 game-message.attacking-other-players=Attacking other players!
 game-message.incoming-attack=Incoming attack!
