More informative summary of server activity. Bump for release v0.22.0.
Previously, only active games would show. Given the game is not super popular, these were
few and far between. By instead focussing on the last time a player *joined the server*
rather than the last time *a game was played*, players may be more likely to hang
around for a short period while others join the lobby.

Bump in version number required due to the way we serialize/deserialize server info.
If it remained the same, we wouldn't be able to differentiate ServerInfoDTO objects
between old and new servers.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -61,6 +61,12 @@ multiplayer.server-list.no-servers-found=No servers found
 multiplayer.server-list.unsupported=Unsupported.\nPlease upgrade to at least v{0}.
 multiplayer.server-list.btn.join=Join
 multiplayer.server-list.btn.info=Info
+multiplayer.server-list.num-players={0,choice,1#1 player|1<{0,number,integer} players}
+multiplayer.server-list.last-player-seen.seconds-ago=Active a few seconds ago
+multiplayer.server-list.last-player-seen.minutes-ago=Active a few minutes ago
+multiplayer.server-list.last-player-seen.hours-ago=Active a few hours ago
+multiplayer.server-list.last-player-seen.days-ago=Active a few days ago
+multiplayer.server-list.last-player-seen.a-long-time-ago=No activity for a long time
 
 multiplayer.final-scores.winner=Winner
 multiplayer.final-scores.others=Other
