Multiplayer menu (doesn't pause, but allows leaving a game more gracefully than previously).

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -10,8 +10,12 @@ btn.main-menu=Main Menu
 btn.resume=Resume
 btn.restart=Restart
 btn.change-game=Change Game
+btn.hide-menu=Hide Menu
+btn.leave-game=Leave Game
 btn.menu=Menu
-paused=Paused
+in-game-menu.paused-menu-title=Paused
+in-game-menu.multiplayer-menu-title=Menu
+in-game-menu.multiplayer-cannot-be-paused=Multiplayer games cannot be paused
 
 options.title=Options
 options.visual-effects=Gratuitous eye straining retro effects
