Breakout: Initial game skeleton, including paddle moved by touching and dragging on the screen.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -121,6 +121,8 @@ game-message.position-changed=You are now in position {0} of {1}!
 
 game.asteroids.intro-message.positive=Destroy the asteroids
 game.asteroids.intro-message.negative=Protect your ship
+game.breakout.intro-message.positive=Smash the bricks
+game.breakout.intro-message.negative=The floor is lava
 game.missile-command.intro-message.positive=Protect the cities
 game.missile-command.intro-message.negative=Conserve your missiles
 game.snake.intro-message.positive=Eat the fruit
