I18n strings regarding controller selection.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -29,6 +29,10 @@ options.avatar.btn-clear=Clear
 options.avatar.btn-help=Help
 options.avatar.btn-show-more=Show more
 
+options.controller-select.title=Controller
+options.controller-select.layout-number=Layout {0}
+options.controller-select.breakout-no-buttons=Drag your finger anywhere on the screen to move the paddle
+
 game-select.title=Choose a game
 game-select.high-score=High Score
 
