App strings reworked

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -18,12 +18,12 @@ in-game-menu.multiplayer-menu-title=Menu
 in-game-menu.multiplayer-cannot-be-paused=Multiplayer games cannot be paused
 
 options.title=Options
-options.visual-effects=Gratuitous eye straining retro effects
+options.visual-effects=Gratuitous eye-straining retro effects
 options.controller-layouts=Controller layouts
 options.multiplayer-avatar=Multiplayer Avatar
 options.avatar.choose=Choose your avatar
 options.avatar.choose-description-empty=You have not currently chosen an avatar.\nChoose from one of these:
-options.avatar.choose-description=To change, choose from one of these
+options.avatar.choose-description=Pick one of these to change avatar
 options.avatar.current=Current avatar
 options.avatar.btn-clear=Clear
 options.avatar.btn-help=Help
@@ -38,35 +38,35 @@ game-select.high-score=High Score
 
 unimplemented-game.title=More Games Coming Soon!
 unimplemented-game.description=Know of a good game to work on next?\nVote for it on GitHub.
-unimplemented-game.next-game-dev=When we get time to add another game,\nthose with many thumbs up will most likely come next.
+unimplemented-game.next-game-dev=When we get time to add another game,\nthose with many upvotes will most likely come next.
 unimplemented-game.coming-soon=More\ncoming soon!
 unimplemented-game.vote=Vote
 
-multiplayer.lobby.splash.play-others=Play other retro fans\nover the internet
-multiplayer.lobby.splash.play-friends=Play friends on your WiFi network
+multiplayer.lobby.splash.play-others=Play other retro fans\nover the Internet
+multiplayer.lobby.splash.play-friends=Play with friends on your Wi-Fi network
 multiplayer.lobby.splash.btn.play-online=Play online
 multiplayer.lobby.splash.btn.start-local-server=Start local server
 multiplayer.lobby.splash.btn.join-local-server=Join local server
 
 multiplayer-lobby.title=Multiplayer
 
-multiplayer.local.starting-server=Starting server
-multiplayer.local.waiting-for-others=Waiting for other players to join
+multiplayer.local.starting-server=Starting server…
+multiplayer.local.waiting-for-others=Waiting for other players to join…
 multiplayer.prompt-to-share=Looking for others to play with? Tired of waiting?\nInvite a friend to download Super Retro Mega Wars.
 multiplayer.btn.share=Share
-multiplayer.local.searching-for-server=Searching for server
+multiplayer.local.searching-for-server=Searching for server…
 multiplayer.local.could-not-find-server=Could not find server
-multiplayer.local.ensure-same-wifi=Make sure you're both connected to the same WiFi network
+multiplayer.local.ensure-same-wifi=Ensure you're both connected to the same Wi-Fi network
 multiplayer.local.could-not-find-server.help-1=Has another player started a server?
-multiplayer.local.could-not-find-server.help-2=Are you on the same WiFi network?
+multiplayer.local.could-not-find-server.help-2=Are you on the same Wi-Fi network?
 multiplayer.local.could-not-find-server.help-3=Do you both have the latest version of Super Retro Mega Wars?
 
-multiplayer.connecting-to-server=Connecting to server
+multiplayer.connecting-to-server=Connecting to server…
 
 multiplayer.ready-to-start.description=Ready to start
 multiplayer.ready-to-start.btn.start-game=Start game
 
-multiplayer.server-list.looking-for-public-servers=Looking for public servers...
+multiplayer.server-list.looking-for-public-servers=Looking for public servers…
 multiplayer.server-list.checking-servers=Checking servers:
 multiplayer.server-list.run-a-server=Want to help the Super Retro Mega Wars\nproject by running a public server?
 multiplayer.server-list.btn.learn-how-to-help=Learn how
@@ -84,7 +84,7 @@ multiplayer.server-list.last-player-seen.a-long-time-ago=No activity for a long 
 multiplayer.final-scores.winner=Winner
 multiplayer.final-scores.others=Other
 multiplayer.final-scores.winner.sole-survivor-1=You win. You are the sole survivor.\nYou have the highest score. Nobody can catch you.
-multiplayer.final-scores.winner.sole-survivor-2=You win. You outlasted your challengers.\nYour score is the best.
+multiplayer.final-scores.winner.sole-survivor-2=You win. You outlasted your challengers.\nYour score is the highest.
 multiplayer.final-scores.winner.sole-survivor-3=You win. Your survival skills are superior.\nTheir scores are inferior.
 multiplayer.final-scores.winner.highest-score-1=You win. You may not have survived as long,\nbut you scored more.
 multiplayer.final-scores.winner.highest-score-2=You win.\nNo need to survive when you score as well as you do.
@@ -92,17 +92,17 @@ multiplayer.final-scores.winner.highest-score-3=You win.\nYou didn't survive, bu
 multiplayer.final-scores.winner.loser-1=You lost.\nBetter luck next time.
 multiplayer.final-scores.winner.loser-2=You lost.\nThere is always next time.
 multiplayer.final-scores.winner.loser-3=You lost.\nPractice more, then win next time.
-multiplayer.final-scores.next-game=The next game will begin soon...
+multiplayer.final-scores.next-game=The next game will begin soon…
 multiplayer.final-scores.points-required-to-win=Needs {0,choice,1#1 more point|1<{0,number,integer} more points} to win!
 multiplayer.final-scores.game-in-progress=Game in progress
-multiplayer.final-scores.you-will-join-next-game=You will join the next game...
+multiplayer.final-scores.you-will-join-next-game=You will join the next game…
 
 multiplayer.avatar.you=You
 
 end-multiplayer.game-over=Game Over
-end-multiplayer.in-progress.title=Game In Progress...
-end-multiplayer.in-progress.description=You will join the next game...
-end-multiplayer.waiting-for-others=Waiting for others...
+end-multiplayer.in-progress.title=Game In Progress…
+end-multiplayer.in-progress.description=You will join the next game…
+end-multiplayer.waiting-for-others=Waiting for others…
 end-multiplayer.still-playing=Still playing
 
 network-error.title=Network Error
@@ -110,11 +110,11 @@ network-error.btn.try-again=Try again
 network-error.btn.rejoin=Rejoin
 network-error.disconnected.server-stopped=The server was stopped,\nplay cannot resume.
 network-error.disconnected.unexpected=You were disconnected from\nthe game unexpectedly.
-network-error.remain-open.title=Game must remain open while connected to the server.\nPlease rejoin to continue playing.
-network-error.server-full.title=Maximum number of players for this server has been reached.\nPlease try again later or join another server.
-network-error.avatar-in-use.title=Someone is already using your avatar... What are the odds?\nPlease either change your avatar, or wait until they leave.
+network-error.remain-open.title=The game must remain open while you are connected to the server.\nPlease rejoin to continue playing.
+network-error.server-full.title=This server is full.\nPlease try again later or join another server.
+network-error.avatar-in-use.title=Someone is already using your avatar… What are the odds?\nPlease either change your avatar, or wait until they leave.
 network-error.avatar-in-use.details=By the way: the odds of this happening randomly are 1 in 18446744073709551614.\nThe most likely scenario is a bug in the server when you last disconnected.
-network-error.server-shutdown.title=The server has been shutdown
+network-error.server-shutdown.title=The server has been shut down
 network-error.server-shutdown.details=This may be for scheduled maintenance, or it could have crashed.\nHopefully it will be back up again soon.\n\nPlease join another server to continue playing.
 
 game-message.attacking-other-players=Attacking other players!
