--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -38,7 +38,7 @@ game-select.high-score=High Score
 
 unimplemented-game.title=More Games Coming Soon!
 unimplemented-game.description=Know of a good game to work on next?\nVote for it on GitHub.
-unimplemented-game.next-game-dev=When we get time to add another game,\nthose with many upvotes will most likely come next.
+unimplemented-game.next-game-dev=When we find the time to add another game,\nthose with many thumbs up will most likely come next.
 unimplemented-game.coming-soon=More\ncoming soon!
 unimplemented-game.vote=Vote
 
@@ -50,23 +50,23 @@ multiplayer.lobby.splash.btn.join-local-server=Join local server
 
 multiplayer-lobby.title=Multiplayer
 
-multiplayer.local.starting-server=Starting server…
-multiplayer.local.waiting-for-others=Waiting for other players to join…
+multiplayer.local.starting-server=Starting server...
+multiplayer.local.waiting-for-others=Waiting for other players to join...
 multiplayer.prompt-to-share=Looking for others to play with? Tired of waiting?\nInvite a friend to download Super Retro Mega Wars.
 multiplayer.btn.share=Share
-multiplayer.local.searching-for-server=Searching for server…
+multiplayer.local.searching-for-server=Searching for server...
 multiplayer.local.could-not-find-server=Could not find server
 multiplayer.local.ensure-same-wifi=Ensure you're both connected to the same Wi-Fi network
 multiplayer.local.could-not-find-server.help-1=Has another player started a server?
-multiplayer.local.could-not-find-server.help-2=Are you on the same Wi-Fi network?
+multiplayer.local.could-not-find-server.help-2=Are the two of you on the same Wi-Fi network?
 multiplayer.local.could-not-find-server.help-3=Do you both have the latest version of Super Retro Mega Wars?
 
-multiplayer.connecting-to-server=Connecting to server…
+multiplayer.connecting-to-server=Connecting to server...
 
 multiplayer.ready-to-start.description=Ready to start
 multiplayer.ready-to-start.btn.start-game=Start game
 
-multiplayer.server-list.looking-for-public-servers=Looking for public servers…
+multiplayer.server-list.looking-for-public-servers=Looking for public servers...
 multiplayer.server-list.checking-servers=Checking servers:
 multiplayer.server-list.run-a-server=Want to help the Super Retro Mega Wars\nproject by running a public server?
 multiplayer.server-list.btn.learn-how-to-help=Learn how
@@ -84,42 +84,42 @@ multiplayer.server-list.last-player-seen.a-long-time-ago=No activity for a long 
 multiplayer.final-scores.winner=Winner
 multiplayer.final-scores.others=Other
 multiplayer.final-scores.winner.sole-survivor-1=You win. You are the sole survivor.\nYou have the highest score. Nobody can catch you.
-multiplayer.final-scores.winner.sole-survivor-2=You win. You outlasted your challengers.\nYour score is the highest.
+multiplayer.final-scores.winner.sole-survivor-2=A winner is you. You outlasted your challengers.\nKindly remind the other players you also got more points.
 multiplayer.final-scores.winner.sole-survivor-3=You win. Your survival skills are superior.\nTheir scores are inferior.
-multiplayer.final-scores.winner.highest-score-1=You win. You may not have survived as long,\nbut you scored more.
+multiplayer.final-scores.winner.highest-score-1=You win. You may not have survived as long,\nbut you got more points.
 multiplayer.final-scores.winner.highest-score-2=You win.\nNo need to survive when you score as well as you do.
 multiplayer.final-scores.winner.highest-score-3=You win.\nYou didn't survive, but you won.
 multiplayer.final-scores.winner.loser-1=You lost.\nBetter luck next time.
 multiplayer.final-scores.winner.loser-2=You lost.\nThere is always next time.
 multiplayer.final-scores.winner.loser-3=You lost.\nPractice more, then win next time.
-multiplayer.final-scores.next-game=The next game will begin soon…
+multiplayer.final-scores.next-game=The next game will begin soon...
 multiplayer.final-scores.points-required-to-win=Needs {0,choice,1#1 more point|1<{0,number,integer} more points} to win!
 multiplayer.final-scores.game-in-progress=Game in progress
-multiplayer.final-scores.you-will-join-next-game=You will join the next game…
+multiplayer.final-scores.you-will-join-next-game=You will join the next game...
 
 multiplayer.avatar.you=You
 
 end-multiplayer.game-over=Game Over
-end-multiplayer.in-progress.title=Game In Progress…
-end-multiplayer.in-progress.description=You will join the next game…
-end-multiplayer.waiting-for-others=Waiting for others…
+end-multiplayer.in-progress.title=Game In Progress...
+end-multiplayer.in-progress.description=You will join the next game...
+end-multiplayer.waiting-for-others=Waiting for others...
 end-multiplayer.still-playing=Still playing
 
 network-error.title=Network Error
 network-error.btn.try-again=Try again
 network-error.btn.rejoin=Rejoin
-network-error.disconnected.server-stopped=The server was stopped,\nplay cannot resume.
+network-error.disconnected.server-stopped=The server was stopped.\nPlay cannot resume.
 network-error.disconnected.unexpected=You were disconnected from\nthe game unexpectedly.
 network-error.remain-open.title=The game must remain open while you are connected to the server.\nPlease rejoin to continue playing.
 network-error.server-full.title=This server is full.\nPlease try again later or join another server.
-network-error.avatar-in-use.title=Someone is already using your avatar… What are the odds?\nPlease either change your avatar, or wait until they leave.
+network-error.avatar-in-use.title=Someone is already using your avatar... What are the odds?\nPlease either change your avatar, or wait until they leave.
 network-error.avatar-in-use.details=By the way: the odds of this happening randomly are 1 in 18446744073709551614.\nThe most likely scenario is a bug in the server when you last disconnected.
 network-error.server-shutdown.title=The server has been shut down
 network-error.server-shutdown.details=This may be for scheduled maintenance, or it could have crashed.\nHopefully it will be back up again soon.\n\nPlease join another server to continue playing.
 
 game-message.attacking-other-players=Attacking other players!
 game-message.incoming-attack=Incoming attack!
-game-message.player-died=Player has died
+game-message.player-died=A player has died
 game-message.last-player-standing=Last survivor: {0} to win!
 game-message.position-changed=You are now in position {0} of {1}!
 
