Enable Estonian translation, add tests to check for malformed translations involving plurals.

--- a/android/assets/i18n/messages_et.properties
+++ b/android/assets/i18n/messages_et.properties
@@ -62,13 +62,13 @@ multiplayer.local.ensure-same-wifi=Veenduge, et olete mõlemad ühendatud samass
 multiplayer.local.could-not-find-server.help-1=Kas mõni teine mängija on alustanud serveri?
 multiplayer.server-list.run-a-server=Tahad aidata Super Retro Mega Wars\nprojekti avaliku serveriga?
 multiplayer.server-list.btn.learn-how-to-help=Õpi kuidas
-multiplayer.server-list.num-players={0,valik,1#1 mängija|1<{0,number,integer} mängijat}
+multiplayer.server-list.num-players={0,choice,1#1 mängija|1<{0,number,integer} mängijat}
 multiplayer.server-list.last-player-seen.seconds-ago=Aktiivne paar sekundit tagasi
 multiplayer.server-list.last-player-seen.minutes-ago=Aktiivne paar minutit tagasi
 multiplayer.server-list.last-player-seen.a-long-time-ago=Pikka aega pole tegevust olnud
 multiplayer.server-list.no-servers-found=Servereid ei leitud
 multiplayer.final-scores.next-game=Järgmine mäng algab peagi...
-multiplayer.final-scores.points-required-to-win=Võitmiseks on vaja {0,valik,1#1 lisapunkt|1<{0,number,integer} lisapunkte}!
+multiplayer.final-scores.points-required-to-win=Võitmiseks on vaja {0,choice,1#1 lisapunkt|1<{0,number,integer} lisapunkte}!
 multiplayer.final-scores.you-will-join-next-game=Sa liitud järgmise mänguga...
 end-multiplayer.game-over=Mäng Läbi
 end-multiplayer.in-progress.title=Mäng käib...
