Enable Turkish and tidy up legacy noto files.
The old 'noto' font has been replaced with 'noto_mono', but there were
still references to 'noto' which made things confusing.

Also fixed an issue with the Turkish translation where a plural was accientally
translated.

--- a/android/assets/i18n/messages_tr.properties
+++ b/android/assets/i18n/messages_tr.properties
@@ -66,7 +66,7 @@ network-error.server-shutdown.title=Sunucu kapatıldı
 multiplayer.final-scores.winner.highest-score-2=Kazandın.\nSenin gibi skor yaparken hayatta kalmaya gerek bile yok.
 options.avatar.btn-clear=Temiz
 end-multiplayer.in-progress.title=Oyun Devam Ediyor...
-multiplayer.server-list.num-players={0,seçim,1#1 oyuncu|1<{0,number,integer} oyuncu}
+multiplayer.server-list.num-players={0,choice,1#1 oyuncu|1<{0,number,integer} oyuncu}
 game.tempest.intro-message.positive=Düşmanları vur
 multiplayer.server-list.last-player-seen.seconds-ago=Birkaç saniye önce aktifti
 multiplayer.server-list.last-player-seen.minutes-ago=Birkaç dakika önce aktifti
