During enabling the Ukranian translation, noticed a few more hardcoded strings.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -19,12 +19,15 @@ in-game-menu.multiplayer-cannot-be-paused=Multiplayer games cannot be paused
 
 options.title=Options
 options.visual-effects=Gratuitous eye-straining retro effects
+options.audio-visual=Audio / Visual
 options.controller-layouts=Controller layouts
 options.multiplayer-avatar=Multiplayer Avatar
 options.avatar.choose=Choose your avatar
 options.avatar.choose-description-empty=You have not currently chosen an avatar.\nChoose from one of these:
 options.avatar.choose-description=Pick one of these to change avatar
 options.avatar.current=Current avatar
+options.avatar.btn-choose=Choose avatar
+options.avatar.btn-change=Change avatar
 options.avatar.btn-clear=Clear
 options.avatar.btn-help=Help
 options.avatar.btn-show-more=Show more
@@ -80,6 +83,9 @@ multiplayer.server-list.last-player-seen.minutes-ago=Active a few minutes ago
 multiplayer.server-list.last-player-seen.hours-ago=Active a few hours ago
 multiplayer.server-list.last-player-seen.days-ago=Active a few days ago
 multiplayer.server-list.last-player-seen.a-long-time-ago=No activity for a long time
+multiplayer.server-list.advanced.rooms=Rooms:
+multiplayer.server-list.advanced.version=Version:
+multiplayer.server-list.advanced.query-time=Query time:
 
 multiplayer.final-scores.winner=Winner
 multiplayer.final-scores.others=Other
