Pacman: initial skeleton files.
Nothing playable yet, just the basic DPad copied from snake.

--- a/android/assets/i18n/messages.properties
+++ b/android/assets/i18n/messages.properties
@@ -143,6 +143,8 @@ game.tetris.intro-message.positive=Fill complete rows
 game.tetris.intro-message.negative=Stay below the top
 game.space-invaders.intro-message.positive=Shoot the aliens
 game.space-invaders.intro-message.negative=Dodge their shots
+game.pacman.intro-message.positive=Eat the snacks
+game.pacman.intro-message.negative=Avoid the ghosts
 
 game.misc.game-over=Game Over
 game.misc.insert-coins=Insert coin\nto continue
